<resources>
    <string name="app_name">Auditoria5S</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloFormulario1">Seiri</string>
    <string name="tituloFotoPatron">Foto Patron</string>

    <string name="textoItem110">1.1 Utilización de los recursos existentes en los sectores que NO son para guardar</string>
    <string name="StrRbItem111">En varios lugares fueron encontradas diversas anormalidads en el uso de recursos (proporciones exceso, improvisaciones, recursos innecesarios, falta o desperdicio).</string>
    <string name="StrRbItem112">En varios lugares fue encontrada una u otra anormalidad en el uso de recursos (proporciones exceso, improvisaciones, recursos innecesarios, falta o desperdicio).</string>
    <string name="StrRbItem113">En uno u otro lugar fueron encontradas diversas anormalidads en el uso de recursos (proporciones exceso, improvisaciones, recursos innecesarios, falta o desperdicio).</string>
    <string name="StrRbItem114">En uno u otro lugar fue encontrado una u otra anormalidad en el uso de recursos (proporciones exceso, improvisaciones, recursos innecesarios, falta o desperdicio). </string>
    <string name="StrRbItem115">Todos los recursos existentes en los pisos, mesas y otros espacios abiertos son compartidos y utilizados adecuadamente (no hay exceso, improvisaciones, recursos innecesarias, falta o desperdicios). Puede haber irregularidades insignificantes para las características</string>


    <string name="textoItem120">1.2 Utilización de los recursos existentes en los lugares que son para guardar</string>
    <string name="StrRbItem121">En varios lugares fueron encontradas diversas anormalidads en el uso de recursos (proporciones exceso, improvisaciones, recursos innecesarios, falta o desperdicio).</string>
    <string name="StrRbItem122">En varios lugares fue encontrada una u otra anormalidad en el uso de recursos (proporciones exceso, improvisaciones, recursos innecesarios, falta o desperdicio).</string>
    <string name="StrRbItem123">En uno u otro lugar fueron encontradas diversas anormalidads en el uso de recursos (proporciones exceso, improvisaciones, recursos innecesarios, falta o desperdicio).</string>
    <string name="StrRbItem124">En uno u otro lugar fue encontrado una u otra anormalidad en el uso de recursos (proporciones exceso, improvisaciones, recursos innecesarios, falta o desperdicio).</string>
    <string name="StrRbItem125">Todos los recursos existentes en los armarios, archivadores, cajones y otros espacios cerrados se conparten y utilizan correctamente (no hay exceso, improvisaciones, recursos innecesarios o en falta). Puede haber irregularidades insignificante para las características del entorno.</string>

    <string name="textoItem130">1.3 Estado de conservación de las instalaciones y recursos</string>
    <string name="StrRbItem131">Hay problemas de conservación generalizados y uno u otro conpromete la seguridad o la funcionalidad de las instalaciones y recursos, teniendo en cuenta las características do ambiente.</string>
    <string name="StrRbItem132">Hay problemas de conservación generalizados, mas ninguno conpromete la seguridad o la funcionalidad de las instalaciones y recursos, teniendo en cuenta las características del ambiente.</string>
    <string name="StrRbItem133">Hay problemas de conservación en una u otra instalación o recurso. Um u otroconpromete la seguridad y/o funcionalidad, teniendo en cuenta las características do ambiente.</string>
    <string name="StrRbItem134">Hay problemas de conservación en una u otra instalación o recurso, mas ningunoconpromete la seguridad y/o funcionalidad, teniendo en cuenta las características do ambiente.</string>
    <string name="StrRbItem135">Todas las instalaciones y los recursos están en buenas condiciones. Puede haber irregularidades insignificantes para las características del entorno.</string>

    <string name="textoItem140">1.4 Control de los problemas de conservación</string>
    <string name="StrRbItem141">No hay justificativa formal para la mayoría de los problemas de conservación encontrados (cuando hay problemas generalizados).</string>
    <string name="StrRbItem142">No hay justificativa formal para algunos problemas de conservación, inclusive para uno u otro que conpromete la seguridad y/o la funcionalidad de las instalaciones y recursos, teniendo en cuenta las características do ambiente.</string>
    <string name="StrRbItem143">No hay justificativa formal para algunos problemas de conservación, mas ninguno conpromete la seguridad y/o la funcionalidad de las instalaciones y recursos, teniendo en cuenta las características do ambiente.</string>
    <string name="StrRbItem144">No hay justificativa formal para uno u otro problema de conservación, mas ningunoconpromete la seguridad y/o la funcionalidad de las instalaciones y recursos, teniendo en cuenta las características do ambiente.</string>
    <string name="StrRbItem145">Hay justificación formal para todos los problemas de conservación y ninguno conpromete la seguridad y/o funcionalidad de las instalaciones y recursos, teniendo en cuenta las características del entorno. Puede haber irregularidades insignificantes para las características del entorno.</string>
    <string name="hintClicItems">Click para expandir/contraer los item</string>
    <string name="tagSacarFoto">Agregar Foto</string>
    <string name="clicParaObservacion">Haga click sobre la foto para agregar comentarios</string>


</resources>
